<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/SOSbutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.24"
                android:text="@string/button_send" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_weight="0.24"
                android:text="@string/button2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_weight="0.24"
                android:text="@string/button3" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_weight="0.24"
                android:text="@string/button4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_weight="0.24"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_weight="0.24"
                android:text="@string/button6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_weight="0.24"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_weight="0.24"
                android:text="@string/button8" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>